--- a/style.css
+++ b/style.css
@@ -4,4 +4,53 @@
     padding:0px;
     box-sizing: border-box;}
 
-body { font-family:sans-serif;}    
+body { font-family:sans-serif;}  
+
+.navbar { display:flex;
+          background-color:#010F12;
+          color:#FFFFFF;
+          justify-content:space-between;
+          height:50px;
+          width:100%;
+          align-items: center;
+          padding:0px 30px;
+
+         }
+ .logo { display:flex;
+        
+         align-items: center;}
+
+ .logo > h4{ letter-spacing:2px; 
+             padding-left:39px;
+             position: absolute;
+             font-weight:600;
+           } 
+           
+ .logo-img { width:50px;
+             position: relative;
+             height:50px;} 
+             
+.logo-img > img { width:100%;
+                  height:100%;}             
+
+
+.manu > ul { display:flex;
+             }         
+
+.manu > ul > li { list-style-type: none;
+                  transition: 0.5s;
+                  padding:3px 10px;
+                 
+                   
+                  }       
+
+.manu > ul > li > a{  font-size:12px ;
+                      color:#FFFFFF;
+                      text-decoration: none; } 
+                      
+.manu > ul > li:hover  { background-color:#DADADA ;
+                            
+}   
+
+.manu > ul > li:hover a{ color:#3C3C3C;}
+                
