--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body { font-family:sans-serif;}
 
 .navbar { display:flex;
           background-color:#010F12;
-          color:#FFFFFF;
           justify-content:space-between;
           height:50px;
           width:100%;
@@ -23,6 +22,7 @@ body { font-family:sans-serif;}
  .logo > h4{ letter-spacing:2px; 
              padding-left:39px;
              position: absolute;
+             color:white;
              font-weight:600;
            } 
            
@@ -31,26 +31,70 @@ body { font-family:sans-serif;}
              height:50px;} 
              
 .logo-img > img { width:100%;
-                  height:100%;}             
+                  height:100%;} 
+
+#check { display:none;
+        } 
+        
+.bar-btn { color:white;
+           display:none;
+           font-size:18px;}       
+                  
+ul  { display:flex;}                  
+ 
+ul > li { list-style-type:none;
+          padding:0px 5px;
+        
+          }  
+          
+ul > li > a{ text-decoration: none;
+             padding:6px 8px;
+             font-size: 14px;
+             transition:0.5s;
+             color:white;} 
+             
+ul > li > a:hover, ul > li > a.active { background-color:rgb(209, 209, 209);
+                                       color:black}             
+                  
+                  
 
 
-.manu > ul { display:flex;
-             }         
 
-.manu > ul > li { list-style-type: none;
-                  transition: 0.5s;
-                  padding:3px 10px;
-                 
-                   
-                  }       
+ 
 
-.manu > ul > li > a{  font-size:12px ;
-                      color:#FFFFFF;
-                      text-decoration: none; } 
-                      
-.manu > ul > li:hover  { background-color:#DADADA ;
-                            
-}   
 
-.manu > ul > li:hover a{ color:#3C3C3C;}
-                
+                     /* Responsive work strted  */
+
+@media only screen and (max-width:725px) {
+
+
+.bar-btn { display:block;}
+
+#check:checked ~ ul { left:0%;}
+
+#check:checked ~ .bar-btn > i::before { content:"\f00d";
+
+               
+}
+
+ ul { position:absolute;
+      top:50px;
+      flex-direction: column;
+      height:100vh;
+      text-align: center;
+      left:-100%;
+      transition: 0.5s;
+      width:100%;
+      background-color: rgb(128, 127, 127);
+      }
+
+ ul > li {padding: 50px 0px;} 
+
+ ul > li > a { font-size: 16px;
+               transition: none;}
+
+
+
+ ul > li > a:hover, ul > li > a.active { background: none;
+                                          color:red;}    
+}                    
